make sure lyrics retain whitespace

--- a/app/styles/chordsheetjs.css
+++ b/app/styles/chordsheetjs.css
@@ -57,6 +57,10 @@
   content: "\200b";
 }
 
+.lyrics {
+  @apply whitespace-pre-wrap;
+}
+
 .paragraph {
   @apply mb-4;
 }
